--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "noodles",
+  "homepage": "https://jovcem.github.io/noodles/",
   "private": true,
   "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@gltf-transform/core": "^4.2.1",
     "@google/model-viewer": "^3.4.0",
+    "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "reactflow": "^11.11.0",
