--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@gltf-transform/core": "^4.2.1",
     "@google/model-viewer": "^3.4.0",
     "gh-pages": "^6.3.0",
+    "perfect-freehand": "^1.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "reactflow": "^11.11.0",
