--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
     "reactflow": "^11.11.0",
     "zustand": "^4.5.0"
   },
