--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@gltf-transform/core": "^4.2.1",
+    "@gltf-transform/extensions": "^4.2.1",
     "@google/model-viewer": "^3.4.0",
     "gh-pages": "^6.3.0",
     "react": "^18.3.1",
